Changes width to 100% on customer-quotes background. Seems to fix a weird issue where scrollbars showed up for Pål and Magnús for non-obvious reasons. Should work the same way.

--- a/source/assets/stylesheets/_customer-quotes.scss
+++ b/source/assets/stylesheets/_customer-quotes.scss
@@ -1,11 +1,11 @@
 // toggles background color on customer quotes section in partials
 .white {
   background-color: $white;
-  width: 100vw;
+  width: 100%;
 }
 .gray {
   background-color: $light-gray;
-  width: 100vw;
+  width: 100%;
 }
 
 .quote {
